@@ -1,5 +1,16 @@
 2005-10-20  Roger Leigh  <rleigh@debian.org>
 
+	* schroot/sbuild-session.c (sbuild_session_run): If a chroot sets
+	SBUILD_CHROOT_SESSION_CREATE, update the chroot name with the
+	session name.
+
+	* schroot/sbuild-chroot.h (SbuildChrootSessionFlags) Removed
+	unused session flags, and renamed SBUILD_CHROOT_SESSION_PERSISTENT
+	to SBUILD_CHROOT_SESSION_CREATE.  All chroot types updated to
+	reflect the change.
+
+2005-10-20  Roger Leigh  <rleigh@debian.org>
+
 	* schroot/sbuild-session.c (sbuild_session_run): For LVM
 	snapshots, set the chroot name to the session name.
 
